--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div style="background-image:url('img/louis-hansel-shotsoflouis-_dNpoWtZRto-unsplash.jpg'); background-size: cover; width: auto; height: 300px; border-radius: 3px; z-index: -1;">
                         <ul>
                             <li><a href="receitas.html"><h2>Saborosas receitas anabólicas</h2></a> </li>
-                            <li><p>Aqui você encontra receitas rápidas e fáceis de preparar</p></li>
+                            <li><p>Aqui você encontra receitas rápidas e fáceis de preparar.</p></li>
                             <li></li>
                         </ul>
                 </div>
