--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-KM25DTN');</script>
     <!-- End Google Tag Manager -->
-    <script data-ad-client="ca-pub-9515919190258672" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+   
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="IVhuv8NTMpKAEX6dQIBWyeVIyGfa6J3w45dk164tzRs" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -33,7 +33,8 @@
     <title>Slim Fit - Blog</title>
 <!-- Bootstrap CSS -->
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilo.css" type="text/css">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -165,6 +166,20 @@
                     </div>
             </div>
 
+            <div class="col-md-4">
+                <div class="gallery wow fadeIn">
+                        <div class="zoom">
+                            <a target href="vacuum.html">
+                                <img src="img/jon-ly-VDdWUSSPPeg-unsplash.jpg" alt="cha vende" class="img-responsive">
+                            </a>
+                        </div>
+                    <div class="desc">
+                        <a href="vacuum.html">
+                            Stomach Vacuum: aprenda como afinar a cintura
+                        </a>
+                    </div>
+                    </div>
+            </div>
         </div>
     </div>
 </section>
@@ -195,9 +210,9 @@
        
 <!-- Latest compiled and minified JavaScript -->
  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <script src="js/wow.min.js"></script>
+ <script src="js/jquery-1.11.3.min.js"></script>
+ <script src="js/bootstrap.min.js"></script>
+ <script src="js/wow.min.js"></script>
               <script>
               new WOW().init();
 
